--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.0.2",
   "description": "To the moon!",
   "dependencies": {
-    "async": "^2.6.0",
-    "bufferutil": "^3.0.3",
-    "discord.js": "^11.2.1",
-    "millify": "^2.0.1",
-    "unirest": "^0.5.1"
+    "axios": "^0.18.0",
+    "cron": "^1.3.0",
+    "simple-git": "^1.92.0",
+    "socketio": "^1.0.0"
   }
 }
