--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "To the moon!",
   "dependencies": {
     "axios": "^0.18.0",
+    "chance": "^1.0.16",
     "cron": "^1.3.0",
     "simple-git": "^1.92.0",
     "socketio": "^1.0.0"
